# lc3tools-rs

./: Cargo.toml  README.md
lc3os/: os.lc3
src/: lib.rs
src/debugger/: mod.rs  nvim.rs
src/simulator/: consts.rs  instruction.rs  mod.rs  registers.rs  utils.rs
tests/: decode.rs  execute.rs  execution.rs  from_2d.rs  instruction_decode.rs  instruction_execute.rs  load_obj.rs
tests/lc3_programs/: hello_world.lc3  loop.lc3
