[package]
name = "lc3tools-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
keybinds = { version = "0.2.0", features = ["crossterm", "serde"] }
log = "0.4.29"
num-traits = "0.2.19"
nvim-oxi = { version = "0.6.0", features = ["neovim-nightly"] }
rand = "0.10.1"
ratatui = "0.30.0"
serde = "1.0.228"
simple_logger = "5.2.0"
toml = "1.1.2"

[lib]
crate-type = ["cdylib", "lib"]
